feat/functionality to validate email through otp
